# GPM-VS-NEW

./: .gitignore  copy_gpm.bat  gitadd.bat  plugindefinition.json
GPA/GPACommon/: dllmain.cpp
GPA/GPACommon/source/: ArrayData.cpp  ArrayData.h  Definitions.cpp  Definitions.h  IDataSource.cpp  IDataSource.h  IUnitMapper.cpp  IUnitMapper.h  Range.cpp  Range.h  Table.cpp  Table.h  TabularData.cpp  TabularData.h  UnitConversion.cpp  UnitConversion.h  Vector3.h
GPA/MathLib/: dllmain.cpp
GPA/MathLib/source/: CoordinateMapping.cpp  CoordinateMapping.h  GeometrySize.cpp  GeometrySize.h  GridGeometry.cpp  GridGeometry.h  InterGridMapper.cpp  InterGridMapper.h  RegularGeometry.h  StructuredBase.cpp  StructuredBase.h  StructuredGrid.cpp  StructuredGrid.h  StructuredSurface.cpp  StructuredSurface.h
GPA/VisageDeckLib/: dllmain.cpp
GPA/VisageDeckLib/TestVsDeck/: TestVsDeck.cpp
src/gpm_rtm_process/: plugindefinition.json
src/plugin_description/: CMakeLists.txt  gpm_plugin_description.h  gpm_plugin_helpers.h  gpm_plugin_lin_multi_span.h  gpm_plugin_lin_span.h
src/simple_plugin_example/: CMakeLists.txt  simple_classifier.cxx  simple_classifier.h  simple_plugin_process.cxx  simple_plugin_process.h  simple_plugin_process_api.cxx  simple_plugin_process_api.h  simple_plugin_process_reader.cxx  simple_plugin_process_reader.h
src/visage_link/: GpmVsCoupler.cpp  GpmVsCoupler.h  gpm_attribute_iterator.cpp  gpm_attribute_iterator.h  gpm_visage_results.cpp  gpm_visage_results.h  gpm_visage_sed_description.cpp  gpm_visage_sed_description.h  utils.cpp  utils.h
(+37 files in other folders)
